# syq

./: .gitignore  Cargo.toml  README.md  at_school.example.toml  other.example.toml
.github/workflows/: report.yml
docs/: README_zh.md
src/: args.rs  command.rs  config.rs  constants.rs  form.rs  lib.rs  main.rs
src/form/: at_school.rs  mod.rs  other.rs
src/login/: mod.rs  report.rs  sso.rs
src/report/: mod.rs  params.rs
